avatar flipx and flipy, better TFRandomEase